# BeetleLang

./: README.md  commands.py  interpreter.py  main.py  pyproject.toml  setup.py
beetle/: cli.py  commands.py  interpreter.py
